# emcore

./: CMakeLists.txt  README.md
cmake/: emcoreConfig.cmake.in
include/emcore/: emcore.h
src/: env.c  env.h  lib.c  wasip2adapter.c
wit/: emcore.wit
